- Fixed Strange alignment of multi-line menu items - Carousel removed from Search.html - Fixed empty searching, now gives appropriate output - Left-Aligned Admissions Text

--- a/source/css/nav_style.css
+++ b/source/css/nav_style.css
@@ -30,6 +30,7 @@ html::-webkit-scrollbar {
 
 nav {
     user-select: none;
+    -webkit-user-select: none;
 }
 
 
@@ -355,6 +356,7 @@ div.square {
 .nav-elem>div {
     margin: auto;
     text-transform: uppercase;
+    text-align: center;
 }
 
 .active-nav-btn {
@@ -788,12 +790,12 @@ span.searcher-result-preview:last-child {
         display: none;
         position: absolute;
         right: 0;
-        width: 250px;
+        /*width: 250px;*/
         height: auto;
         margin: auto;
         padding: 30px 0;
         padding-top: 4px;
-        top: 48px;
+        /*top: 48px;*/
         font-family: 'Century Gothic', 'Futura', 'Didact Gothic', san-serif;
         text-transform: uppercase;
         background-color: #a60000;
